--- a/draw/templates/draw/small.html
+++ b/draw/templates/draw/small.html
@@ -233,12 +233,12 @@
     <!-- 5 buttons, smaller icons-->
     <div class="navBar" id="navBar1">
         <button class="navBar1Button" id="muteButton1">
-            <i class="fas fa-microphone" id="mic1"></i>
+            <i class="fas fa-microphone-slash" id="mic1"></i>
             
 
         </button>
         <button class="navBar1Button" id="videoButton1">
-            <i class="fas fa-video" id="vid1"></i>
+            <i class="fas fa-video-slash" id="vid1"></i>
         </button>
         <button class="navBar1Button" id="chatButton1">
             <i class="far fa-comment-dots"></i>
@@ -282,12 +282,12 @@
     <!-- 5 buttons, bigger icons-->
     <div class="navBar" id="navBar2">
         <button class="navBar2Button" id="muteButton2">
-            <i class="fas fa-microphone" id="mic2"></i>
+            <i class="fas fa-microphone-slash" id="mic2"></i>
             
 
         </button>
         <button class="navBar2Button" id="videoButton2">
-            <i class="fas fa-video" id="vid2"></i>
+            <i class="fas fa-video-slash" id="vid2"></i>
         </button>
         <button class="navBar2Button" id="chatButton2">
             <i class="far fa-comment-dots"></i>
@@ -331,12 +331,12 @@
     <!-- 4 buttons, smaller icons-->
     <div class="navBar" id="navBar3">
         <button class="navBar3Button" id="muteButton3">
-            <i class="fas fa-microphone" id="mic3"></i>
+            <i class="fas fa-microphone-slash" id="mic3"></i>
             
 
         </button>
         <button class="navBar3Button" id="videoButton3">
-            <i class="fas fa-video" id="vid3"></i>
+            <i class="fas fa-video-slash" id="vid3"></i>
         </button>
         <span class="musicSheetBox" id="musicSheetBox3">
             <button class="musicBoxNumber" id="musicBox3Number1">
@@ -377,12 +377,12 @@
     <!-- 4 buttons, bigger icons-->
     <div class="navBar" id="navBar4">
         <button class="navBar4Button" id="muteButton4">
-            <i class="fas fa-microphone" id="mic4"></i>
+            <i class="fas fa-microphone-slash" id="mic4"></i>
             
 
         </button>
         <button class="navBar4Button" id="videoButton4">
-            <i class="fas fa-video" id="vid4"></i>
+            <i class="fas fa-video-slash" id="vid4"></i>
         </button>
         <span class="musicSheetBox" id="musicSheetBox4">
             <button class="musicBoxNumber" id="musicBox4Number1">
